# dts-merge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dts_merge/: __init__.py  cli.py  merge.py  parser.py
tests/: test_cpp.py  test_merge.py  test_parser.py
tests/fixtures/: a7_fpga.dts
tests/fixtures/hps/: socfpga_agilex.dtsi  socfpga_agilex7_socdk.dts  socfpga_agilex_socdk.dts
tests/integration/: test_agilex7_integration.py
